--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    <figure></figure>
     <main>
         <article>
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
