fixed typo and adjusted h4 font-size to original of 1.17 em that was gathered from inspect element on sample code.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        <article>
+        </article>
         <article>
             <h4>Cost Management</h4>
             <img src="./assets/images/cost-management.png" alt="A gear with dollar signs around it"/>
