fixed typo which fixed nav links.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <figure></figure>
     <main>
-        <article id="#search-engine-optimization">
+        <article id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Notebook on a desk explaining seo benefits"/>
             <h2>Search Engine Optimization</h2>
             <p>
